--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ apply plugin: "java"
 
 version '1.0'
 
+targetCompatibility = 8
+sourceCompatibility = JavaVersion.VERSION_16
+
 sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
@@ -19,7 +22,7 @@ ext{
 //java 8 backwards compatibility flag
 allprojects{
     tasks.withType(JavaCompile){
-        //options.compilerArgs.addAll(['--release', '8'])
+        options.compilerArgs.addAll(['--release', '8'])
     }
 }
 
