--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ allprojects{
 
 dependencies{
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:main-SNAPSHOT"
+    compileOnly "com.github.Anuken.MindustryJitpack:66595eb140"
 }
 
 task jarAndroid{
