--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v136'
-    jabelVersion = "93fde537c7"
+    mindustryVersion = 'v137'
+    jabelVersion = "0.7.0"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
 
@@ -27,8 +27,9 @@ allprojects{
 }
 
 dependencies{
+    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:v136"
 }
 
 task jarAndroid{
