Selection overlay rendering
Starting on overlay for block selection. Currently only works on desktop.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,6 +9,10 @@ unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw t
 stat.familyname = Title
 stat.familylink = More info
 
+bar.pumpabletiles = Pumpable tiles found!
+bar.crackedfloors = Cracked floors found!
+bar.nocrackedfloors = No valid floors.
+
 category.family = Family
 
 dialog.SCHsettings = Map Controller
