AND IT WILL COME
LIKE A FLOOD OF <fire>

-Fixed up classes related to upgrades
-Added classes for upgradeable landmines
-Implemented a range multiplier for upgradeable entities and upgrades
-Fixed a (blunder) spelling mistake in UpgradeDrawer

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,8 +6,13 @@ unit.hollow-frostscape-javelin.name = Javelin
 unit.hollow-frostscape-javelin.description = Launches chains of missiles which discharge into nearby enemies. Gains armor when moving faster, and damages rammed targets.
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
+block.hollow-frostscape-thermal-landmine.name = Thermal Mine
+block.hollow-frostscape-thermal-landmine.description = Evades detection, activates when stepped on. Remains on while a unit is nearby.
+block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the map evasion tech, sponsored by RAID BLOCK SHADOW HEROS
+
 stat.familyname = Title
 stat.familylink = More info
+stat.charge = Charge
 
 bar.pumpabletiles = Pumpable tiles found!
 bar.crackedfloors = Cracked floors found!
