--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -10,6 +10,14 @@ block.hollow-frostscape-thermal-landmine.name = Thermal Mine
 block.hollow-frostscape-thermal-landmine.description = Evades detection, activates when stepped on. Remains on while a unit is nearby.
 block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the map evasion tech, sponsored by RAID BLOCK SHADOW HEROS
 
+block.hollow-frostscape-pyroclast.name = Pyroclast
+block.hollow-frostscape-pyroclast.description = Launches bouncy shells, which fragments into napalm filled shards at regular angles.
+block.hollow-frostscape-pyroclast.details = Y'know I think Sh1p is a bit too obsessed with fire. It's just a more convoluted napalm gun at this point. Next thing you know there'll be a flamethrower which shoots flaming Arkycite and the world will end.
+
+status.hollow-frostscape-sticky-fire.name = Sticky Fire/Napalm
+status.hollow-frostscape-sticky-fire.description = Spreads, and isn't extinguishable by water.
+status.hollow-frostscape-sticky-fire.details = Why did we stop using this again?
+
 stat.familyname = Title
 stat.familylink = More info
 stat.charge = Charge
