--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -11,7 +11,7 @@ block.hollow-frostscape-thermal-landmine.description = Evades detection, activat
 block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the map evasion tech, sponsored by RAID BLOCK SHADOW HEROS
 
 block.hollow-frostscape-pyroclast.name = Pyroclast
-block.hollow-frostscape-pyroclast.description = Launches bouncy shells, which fragments into napalm filled shards at regular angles.
+block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
 block.hollow-frostscape-pyroclast.details = Y'know I think Sh1p is a bit too obsessed with fire. It's just a more convoluted napalm gun at this point. Next thing you know there'll be a flamethrower which shoots flaming Arkycite and the world will end.
 
 status.hollow-frostscape-sticky-fire.name = Sticky Fire/Napalm
