...Im not sure the word upgrade is a word anymore

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -15,8 +15,11 @@ block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing s
 block.hollow-frostscape-pyroclast.details = Y'know I think Sh1p is a bit too obsessed with fire. It's just a more convoluted napalm gun at this point. Next thing you know there'll be a flamethrower which shoots flaming Arkycite and the world will end.
 
 status.hollow-frostscape-sticky-fire.name = Sticky Fire/Napalm
-status.hollow-frostscape-sticky-fire.description = Spreads, and isn't extinguishable by water.
+status.hollow-frostscape-sticky-fire.description = Turns burning into instant damage.
 status.hollow-frostscape-sticky-fire.details = Why did we stop using this again?
+
+upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
+upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
 
 stat.familyname = Title
 stat.familylink = More info
