Change turret part directory, add funny description
Uploaded progress on upgrade ui but at this point it's no new news

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -12,7 +12,8 @@ block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the ma
 
 block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
-block.hollow-frostscape-pyroclast.details = The idiots who designed this hotwizer fricking stored the oil required in glass tanks over the barrel. They thought it was cool to have the barrel recoil behind the turret, but I think that's dumb.
+block.hollow-frostscape-pyroclast.details = Y'know I think Sh1p is a bit too obsessed with fire. It's just a more convoluted napalm gun at this point. Next thing you know there'll be a flamethrower which shoots flaming Arkycite and the world will end.
+
 status.hollow-frostscape-sticky-fire.name = Sticky Fire/Napalm
 status.hollow-frostscape-sticky-fire.description = Turns burning into instant damage.
 status.hollow-frostscape-sticky-fire.details = Why did we stop using this again?
