--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -21,6 +21,11 @@ status.hollow-frostscape-sticky-fire.details = Why did we stop using this again?
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
 upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
 
+
+settings.frostscape-title = Frostscape
+settings..frostscape-parallax = Parallax
+settings.frostscape-wind-visual-force = Wind Visual Force
+
 stat.familyname = Title
 stat.familylink = More info
 stat.charge = Charge
