Status EFfects, light reflector sprites
-Added a status effect which is applied upon touching sulphuric liquids
-Wip functionality for the core to produce power
-Added variable width to light beams
-Implemented sprites for the solar reflector
-WorldShapes are now offset by their x and y
-Fixed Mysterious bug that caused light beams to have NaN color
-More optimizations to LightBeams.java
-Light color now supports light with components set to 0
-Fixed up light drawing code, now checks for the collision field in CollisionData

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -18,6 +18,10 @@ status.hollow-frostscape-sticky-fire.name = Sticky Fire/Napalm
 status.hollow-frostscape-sticky-fire.description = Turns burning into instant damage.
 status.hollow-frostscape-sticky-fire.details = Why did we stop using this again?
 
+status.hollow-frostscape-caustic-coating.name = Caustic Coating
+status.hollow-frostscape-caustic-coating.description = Causes degradation of the hull reducing durability and movement speed, eating away at what's left.
+status.hollow-frostscape-caustic-coating.details = You'll need an Effigy of Decay for this one.
+
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
 upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
 
