--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,9 +1,9 @@
 unit.hollow-frostscape-sunspot.name = Sunspot
-unit.hollow-frostscape-sunspot.description = Charges at targets with an adjustable engine
+unit.hollow-frostscape-sunspot.description = Charges at targets with an adjustable engine. Gains armor when moving faster, and damages rammed targets.
 unit.hollow-frostscape-sunspot.details = Looks like a spearhead, but its proportions are wack.
 
 unit.hollow-frostscape-javelin.name = Javelin
-unit.hollow-frostscape-javelin.description = Launches chains of missiles which discharge into nearby enemies. Gains armor when moving faster, and damages rammed targets.
+unit.hollow-frostscape-javelin.description = Fires a stream of short-ranged flame. Gains armor when moving faster, and damages rammed targets.
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
 block.hollow-frostscape-thermal-landmine.name = Thermal Mine
