--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -53,3 +53,14 @@ family.hollow-frostscape-assault.details = [#ffa465]Assaults[] are usually your 
 
 controller.default.name = Default Controller
 controller.hollow-frostscape-fart.name = Fart Controller
+
+#Guide to formatting custom messages
+#chances should contain a category name, then a chance to appear. Ex: category|chance
+#individual categories should be separated with | like this: hollow-frostscape-splash-category = entry1|entry2|entry3
+
+hollow-frostscape.splash.chances = special|0.05|misc|0.15|suggestion|0.55|indev|0.15
+hollow-frostscape.splash.special = Thank you for using the mod!|:D
+hollow-frostscape.splash.indev = Still wip, crashes inbound|Issue Reports 1000
+hollow-frostscape.splash.misc = Changes every time you win, just for you :D|Under da C|Java === suck|Bevy: a large group of people or things of a particular kind.\n(Rare)a group of roe deer, quails, or larks.|wind3.ogg
+hollow-frostscape.splash.suggestion = Also try Endless Rusting!|Also try Pixelcraft!|Also try Omalon!|Fictional Octo System!
+hollow-frostscape.splash.default = I forgot what I was going to say|Wait... you're still here?
