Block scanning pt3: Database
-Redid the magma floors
-Added an extras section to the database
-Implemented a system which categorises blocks into an env category automaticaly, and adds that to stats
-removed a depreciated ContentInfoAddition

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,6 +6,8 @@ unit.hollow-frostscape-javelin.name = Javelin
 unit.hollow-frostscape-javelin.description = Fires a stream of short-ranged flame. Gains armor when moving faster, and damages rammed targets.
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
+block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic Zone
+
 block.hollow-frostscape-thermal-landmine.name = Thermal Mine
 block.hollow-frostscape-thermal-landmine.description = Evades detection, activates when stepped on. Remains on while a unit is nearby.
 block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the map evasion tech, sponsored by RAID BLOCK SHADOW HEROS
@@ -32,6 +34,7 @@ settings.frostscape-wind-visual-force = Wind Visual Force
 
 stat.familyname = Title
 stat.familylink = More info
+stat.envcategory = Environmental Category
 stat.charge = Charge
 
 bar.pumpabletiles = Pumpable tiles found!
@@ -39,8 +42,12 @@ bar.crackedfloors = Cracked floors found!
 bar.nocrackedfloors = No valid floors.
 
 category.family = Family
+category.scanning = Scanning
+category.scanning.vanilla = Vanilla
 
 dialog.SCHsettings = Map Controller
+dialog.database-entries = Extras
+dialog.database-entries.info0 = Welcome to the database extension!\nThe buttons at the bottom will change the [accent]contents[] of this dialog.
 
 family.hollow-frostscape-hunter.name = Hunter
 family.hollow-frostscape-hunter.description = A family of units designed to hunt down targets, and harass larger threats.
@@ -53,6 +60,8 @@ family.hollow-frostscape-assault.details = [#ffa465]Assaults[] are usually your 
 
 controller.default.name = Default Controller
 controller.hollow-frostscape-fart.name = Fart Controller
+
+extras = Extras
 
 #Guide to formatting custom messages
 #chances should contain a category name, then a chance to appear. Ex: category|chance
