Block scanning pt4: I SHOVED A HOLE DATABASE DIALOG INTO THIS BOAT
FLEX tAPE YeAH

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,6 +6,15 @@ unit.hollow-frostscape-javelin.name = Javelin
 unit.hollow-frostscape-javelin.description = Fires a stream of short-ranged flame. Gains armor when moving faster, and damages rammed targets.
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
+block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
+block.spawn.details = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
+
+block.space.description = It's space, what did you expect.
+block.space.details = looking out into the vast expanse makes you seem insignificant in comparison.\nhey, that one looks like a crewmate!
+
+block.air.description = It's space, what did you expect.
+block.air.details = mmm 20% unit engine exhaust\nb r e a t h e s       a   g r   e s  s   i  v e   l y
+
 block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic Zone
 
 block.hollow-frostscape-thermal-landmine.name = Thermal Mine
