Block Scanning pt... uhh 5?
-FIxed up the dialog
-Added lore notes

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -15,7 +15,7 @@ block.space.details = looking out into the vast expanse makes you seem insignifi
 block.air.description = It's space, what did you expect.
 block.air.details = mmm 20% unit engine exhaust\nb r e a t h e s       a   g r   e s  s   i  v e   l y
 
-block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic Zone
+block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic
 
 block.hollow-frostscape-thermal-landmine.name = Thermal Mine
 block.hollow-frostscape-thermal-landmine.description = Evades detection, activates when stepped on. Remains on while a unit is nearby.
