Few sprite changes, moved things around

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,7 +7,7 @@ unit.hollow-frostscape-javelin.description = Fires a stream of short-ranged flam
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
-block.spawn.details = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
+block.spawn.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
 
 block.space.description = It's space, what did you expect.
 block.space.details = looking out into the vast expanse makes you seem insignificant in comparison.\nhey, that one looks like a crewmate!
@@ -57,6 +57,10 @@ category.scanning.vanilla = Vanilla
 dialog.SCHsettings = Map Controller
 dialog.database-entries = Extras
 dialog.database-entries.info0 = Welcome to the database extension!\nThe buttons at the bottom will change the [accent]contents[] of this dialog.
+#All the esater eggs/refrences to Endless Rusting
+dialog.database-entries.info1 = [sky]B L I N D I N G  L I G H T
+dialog.database-entries.info2 = [red]F O R E V E R  T R A P P E D  I N  T H I S  D A M M  D I A L O G . . .
+dialog.database-entries.info3 = [#f5bf79]A C H I E V E  E N L I G H T E N M E N T.
 
 family.hollow-frostscape-hunter.name = Hunter
 family.hollow-frostscape-hunter.description = A family of units designed to hunt down targets, and harass larger threats.
@@ -82,3 +86,5 @@ hollow-frostscape.splash.indev = Still wip, crashes inbound|Issue Reports 1000
 hollow-frostscape.splash.misc = Changes every time you win, just for you :D|Under da C|Java === suck|Bevy: a large group of people or things of a particular kind.\n(Rare)a group of roe deer, quails, or larks.|wind3.ogg
 hollow-frostscape.splash.suggestion = Also try Endless Rusting!|Also try Pixelcraft!|Also try Omalon!|Fictional Octo System!
 hollow-frostscape.splash.default = I forgot what I was going to say|Wait... you're still here?
+
+content.notes.name = Lore Notes
