--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -23,7 +23,7 @@ block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the ma
 
 block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
-block.hollow-frostscape-pyroclast.details = Y'know I think Sh1p is a bit too obsessed with fire. It's just a more convoluted napalm gun at this point. Next thing you know there'll be a flamethrower which shoots flaming Arkycite and the world will end.
+block.hollow-frostscape-pyroclast.details = The horns aren't just for show.
 
 status.hollow-frostscape-sticky-fire.name = Sticky Fire/Napalm
 status.hollow-frostscape-sticky-fire.description = Turns burning into instant damage.
