--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -30,7 +30,7 @@ status.hollow-frostscape-sticky-fire.description = Turns burning into instant da
 status.hollow-frostscape-sticky-fire.details = Why did we stop using this again?
 
 status.hollow-frostscape-caustic-coating.name = Caustic Coating
-status.hollow-frostscape-caustic-coating.description = Causes degradation of the hull reducing durability and movement speed, eating away at what's left.
+status.hollow-frostscape-caustic-coating.description = Quickly wears away at shields.
 status.hollow-frostscape-caustic-coating.details = You'll need an Effigy of Decay for this one.
 
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
@@ -45,6 +45,7 @@ stat.familyname = Title
 stat.familylink = More info
 stat.envcategory = Environmental Category
 stat.charge = Charge
+stat.shieldDamageMultiplier = Shield Damage Multiplier
 
 bar.pumpabletiles = Pumpable tiles found!
 bar.crackedfloors = Cracked floors found!
