--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v140'
-    jabelVersion = "0.7.0"
+    mindustryVersion = 'v141'
+    jabelVersion = "93fde537c7"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
 
@@ -28,8 +28,18 @@ allprojects{
 
 dependencies{
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
+
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
+}
+
+//force arc version
+configurations.all{
+    resolutionStrategy.eachDependency { details ->
+        if(details.requested.group == 'com.github.Anuken.Arc'){
+            details.useVersion "$mindustryVersion"
+        }
+    }
 }
 
 task jarAndroid{
@@ -48,20 +58,6 @@ task jarAndroid{
         //dex and desugar files - this requires d8 in your PATH
         "d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
             .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
-    }
-}
-
-task buildRun(dependsOn: jar){
-    doLast {
-        copy {
-            from "build/libs/Welcome-to-the-FrostscapeDesktopDesktop.jar"
-            into System.getenv("destination")
-        }
-        exec {
-            executable = "java"
-            args = ["-jar", System.getenv("game")];
-            workingDir = System.getenv("gameDir");
-        }
     }
 }
 
