--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,11 +3,15 @@ unit.hollow-frostscape-sunspot.description = Charges at targets with an adjustab
 unit.hollow-frostscape-sunspot.details = Looks like a spearhead, but its proportions are wack.
 
 unit.hollow-frostscape-javelin.name = Javelin
-unit.hollow-frostscape-javelin.description = Fires a stream of short-ranged flame. Gains armor when moving faster, and damages rammed targets.
+unit.hollow-frostscape-javelin.description = Fires a short-ranged jet of flame. Gains armor when moving faster, and damages rammed targets.
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
+unit.hollow-frostscape-stalagmite.name = Stalagmite
+unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water. Pressure rises proportionaly to speed. Traverses expanses with an adjustable engine.
+unit.hollow-frostscape-stalagmite.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
+
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
-block.spawn.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
+block.spawn.details = Wtf are you doing scanning spawns.
 
 block.space.description = It's space, what did you expect.
 block.space.details = looking out into the vast expanse makes you seem insignificant in comparison.\nhey, that one looks like a crewmate!
@@ -25,9 +29,41 @@ block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
 block.hollow-frostscape-pyroclast.details = The horns aren't just for show.
 
-status.hollow-frostscape-sticky-fire.name = Sticky Fire/Napalm
-status.hollow-frostscape-sticky-fire.description = Turns burning into instant damage.
-status.hollow-frostscape-sticky-fire.details = Why did we stop using this again?
+item.hollow-frostscape-magnetite-shards.name = Magnetite
+item.hollow-frostscape-magnetite-shards.description = Used as a building material and in thermite production.
+item.hollow-frostscape-magnetite-shards.details = The rose chocolate ice cream comes with a cup!\n[darkgray]Shoulda gotten three scoops *grumble*[]
+
+item.hollow-frostscape-bauxite.name = Bauxite
+item.hollow-frostscape-bauxite.description = Used as a building material and refined for both Aluminium and Gallium.
+item.hollow-frostscape-bauxite.details = The rose chocolate ice cream comes with a cup!\n[darkgray]Shoulda gotten three scoops *grumble*[]
+
+item.hollow-frostscape-sulphur.name = Sulphur
+item.hollow-frostscape-sulphur.description = Used in ore refinement, along with powerful projectile and explosive weaponry
+item.hollow-frostscape-sulphur.details = Cheese.\nBottom text
+
+item.hollow-frostscape-ferric-panels.name = Ferric Panels
+item.hollow-frostscape-ferric-panels.description = Used in armor plating and light tech.
+item.hollow-frostscape-ferric-panels.details = Iron but flat
+
+item.hollow-frostscape-aluminium.name = Aluminium
+item.hollow-frostscape-aluminium.description = Used in unit hulls, portable liquid storage and corrosion protection. Very light.
+item.hollow-frostscape-aluminium.details = Be honest it looks like generic metal no#infinity without context.
+
+item.hollow-frostscape-thermite.name = Thermite
+item.hollow-frostscape-thermite.description = Used extensively in welding and weaponry. Useful as a powerful (but dangerous!) source of fuel.
+item.hollow-frostscape-thermite.details = Al + Fe = SPONTANIUM COMBUSTUM-
+
+item.hollow-frostscape-ice.name = Ice
+item.hollow-frostscape-ice.description = Frozen water usually gotten as a waste product. Useful as portable water storage/coolent.
+item.hollow-frostscape-ice.details = The obligatory generic item for cold planet mods with dihydride monoxide. Accelerates corrosion and suffocates larger lifeforms with advanced respiratory systems.\n*Water but i c e
+
+item.hollow-frostscape-hailite.name = Hailite
+item.hollow-frostscape-hailite.description = Common rock salt key to obtaining Sodium and Chlorine
+item.hollow-frostscape-hailite.details = NaCHOS
+
+status.hollow-frostscape-napalm.name = Napalm
+status.hollow-frostscape-napalm.description = Turns burning into instant damage.
+status.hollow-frostscape-napalm.details = Wait why did we stop using this again?
 
 status.hollow-frostscape-caustic-coating.name = Caustic Coating
 status.hollow-frostscape-caustic-coating.description = Quickly wears away at shields.
@@ -36,9 +72,8 @@ status.hollow-frostscape-caustic-coating.details = You'll need an Effigy of Deca
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
 upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
 
-
 settings.frostscape-title = Frostscape
-settings..frostscape-parallax = Parallax
+settings.frostscape-parallax = Parallax
 settings.frostscape-wind-visual-force = Wind Visual Force
 
 stat.familyname = Title
