Stalagmite resprite, update to SwingWeapon rotation logic

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,13 +1,13 @@
 unit.hollow-frostscape-sunspot.name = Sunspot
-unit.hollow-frostscape-sunspot.description = Charges at targets with an adjustable engine. Gains armor when moving faster, and damages rammed targets.
+unit.hollow-frostscape-sunspot.description = Charges at targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
 unit.hollow-frostscape-sunspot.details = Looks like a spearhead, but its proportions are wack.
 
 unit.hollow-frostscape-javelin.name = Javelin
-unit.hollow-frostscape-javelin.description = Fires a short-ranged jet of flame. Gains armor when moving faster, and damages rammed targets.
+unit.hollow-frostscape-javelin.description = Fires a short-ranged jet of flame. Gains armor when moving quickly, and damages rammed targets.
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
 unit.hollow-frostscape-stalagmite.name = Stalagmite
-unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water. Pressure rises proportionaly to speed. Traverses expanses with an adjustable engine.
+unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water. Pressure rises proportionally to speed. Travels between bodies of water with a toggleable engine.
 unit.hollow-frostscape-stalagmite.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
 
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
