--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ sourceCompatibility = JavaVersion.VERSION_16
 sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
+    maven{ url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository'}
     mavenCentral()
-    maven{ url 'https://www.jitpack.io' }
 }
 
 ext{
