Proper implementation of Conflex status stacking

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -69,6 +69,11 @@ status.hollow-frostscape-caustic-coating.name = Caustic Coating
 status.hollow-frostscape-caustic-coating.description = Quickly wears away at shields.
 status.hollow-frostscape-caustic-coating.details = You'll need an Effigy of Decay for this one.
 
+status.hollow-frostscape-conflex-internal.name = Conflex
+status.hollow-frostscape-conflex.name = Conflex
+status.hollow-frostscape-conflex.description = Stacks with itself. Less effective against larger units.
+status.hollow-frostscape-conflex.details = The inverse of a reflex in graph theory would have a con, so conflex was born out of cursed math naming!
+
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
 upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
 
