Famic stone and aty grates

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -77,6 +77,10 @@ status.hollow-frostscape-conflex.details = The inverse of a reflex in graph theo
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
 upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
 
+block.hollow-frostscape-mafic-floor.name = Mafic Floor
+block.hollow-frostscape-mafic-stone.name = Mafic Stone
+block.hollow-frostscape-mafic-boulder.name = Mafic Boulder
+
 settings.frostscape-title = Frostscape
 settings.frostscape-parallax = Parallax
 settings.frostscape-wind-visual-force = Wind Visual Force
