Too many changes for me to list

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,6 +29,14 @@ block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
 block.hollow-frostscape-pyroclast.details = The horns aren't just for show.
 
+item.hollow-frostscape-rust.name = Rust
+item.hollow-frostscape-rust.description = Pieces of scrap metal commonly extracted from wreckage and decayed structures.\nFar too gone to be refined, but still usable in machines...
+item.hollow-frostscape-rust.details = This piece of chocolate is surprisingly bitter. Has a very pixely origin.
+
+item.hollow-frostscape-stone.name = Stone
+item.hollow-frostscape-stone.description = Bricks of rubble commonly harvested from wreckage ruined barriers\nFar too gone to be refined, but still usable for infrastructure...
+item.hollow-frostscape-stone.details = I swear if I have to explain that this isn't actually pure "rock" something is gona blow.\nNo, this is not taconite -.-
+
 item.hollow-frostscape-magnetite-shards.name = Magnetite
 item.hollow-frostscape-magnetite-shards.description = Used as a building material and in thermite production.
 item.hollow-frostscape-magnetite-shards.details = The rose chocolate ice cream comes with a cup!\n[darkgray]Shoulda gotten three scoops *grumble*[]
@@ -58,7 +66,7 @@ item.hollow-frostscape-ice.description = Frozen water usually gotten as a waste 
 item.hollow-frostscape-ice.details = The obligatory generic item for cold planet mods with dihydride monoxide. Accelerates corrosion and suffocates larger lifeforms with advanced respiratory systems.\n*Water but i c e
 
 item.hollow-frostscape-hailite.name = Hailite
-item.hollow-frostscape-hailite.description = Common rock salt key to obtaining Sodium and Chlorine
+item.hollow-frostscape-hailite.description = Common rock salt key to obtaining Sodium and Chlorine, and usable in electrolysis.
 item.hollow-frostscape-hailite.details = NaCHOS
 
 status.hollow-frostscape-napalm.name = Napalm
