--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,14 +1,18 @@
 unit.hollow-frostscape-sunspot.name = Sunspot
-unit.hollow-frostscape-sunspot.description = Charges at targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
+unit.hollow-frostscape-sunspot.description = Charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
 unit.hollow-frostscape-sunspot.details = Looks like a spearhead, but its proportions are wack.
 
 unit.hollow-frostscape-javelin.name = Javelin
-unit.hollow-frostscape-javelin.description = Fires a short-ranged jet of flame. Gains armor when moving quickly, and damages rammed targets.
+unit.hollow-frostscape-javelin.description = Fires a short-ranged jet of flame at enemy targets. Gains armor when moving quickly, and damages rammed targets.
 unit.hollow-frostscape-javelin.details = Unlike the spear variety you'll throw this one just about as often as you throw your controller.
 
 unit.hollow-frostscape-stalagmite.name = Stalagmite
-unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water. Pressure rises proportionally to speed. Travels between bodies of water with a toggleable engine.
+unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water at enemy targets. Pressure rises proportionally to speed. Travels between bodies of water with a toggleable engine.
 unit.hollow-frostscape-stalagmite.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
+
+unit.hollow-frostscape-cord.name = Cord
+unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds that frag into bouncy shards at enemy targets, applying a stacking slowing effect.
+unit.hollow-frostscape-cord.details = Stuck in a bind
 
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
 block.spawn.details = Wtf are you doing scanning spawns.
@@ -117,13 +121,17 @@ dialog.database-entries.info3 = [#f5bf79]A C H I E V E  E N L I G H T E N M E N 
 
 family.hollow-frostscape-hunter.name = Hunter
 family.hollow-frostscape-hunter.description = A family of units designed to hunt down targets, and harass larger threats.
-family.hollow-frostscape-hunter.details = [#dde6f0]Hunters[] are often built with at least one of three traits in mind.\n\nSpeed, range or stealth.\n\nThis makes them [accent]ideal[] for "hunting" or harassing targets.\n\nSpecialized hunters can serve a secondary use, although less pronounced. Speedier hunters can be used to scout ahead, or to patrol territory. Particularly stealthy hunters can be used as ambush units, although not built for facing full armies or assaulting buildings behind the front lines. Overall though they are quite [accent]versatile[].\n\nDespite their abilities, they are generally [red]worse[] at dealing with [accent]organized defenses[] than [accent]small outposts or assault squads[].\n\nA common hunter unit is the [#dde6f0]Sunspot[], a charging flying unit with a melee weapon on it's front. It's lightweight body and powerful engine make it very mobile, while still being able to ram its targets with enough force to damage them.\n\nThe Sunspot is [red]weak[] against [accent]organized defenses[], with [accent]area damage[] or [accent]knockback capabilities[], and won't put up much of a fight against larger targets.\n\nMost hunters are best used alone, and do not lend much support to army compositions, however certain hunters may provide boosts to allied units in an area around themselves, making them a slight bit more useful when in a group.
+family.hollow-frostscape-hunter.details = [#dde6f0]Hunters[] are often built with at least one of three traits in mind.\n\nSpeed, range or stealth.\n\nThis makes them [accent]ideal[] for "hunting" or harassing targets.\n\nSpecialized hunters can serve a secondary use, although less pronounced. Speedier hunters can be used to scout ahead, or to patrol territory. Particularly stealthy hunters can be used as ambush units, although not built for facing full armies or assaulting buildings behind the front lines. Overall though they are quite [accent]versatile[].\n\nDespite their abilities, they are generally [red]worse[] at dealing with [accent]organized defenses[] than [accent]small outposts or assault squads[].\n\nMost hunters are best used alone, and do not lend much support to army compositions, however certain hunters may provide boosts to allied units in an area around themselves, making them a slight bit more useful when in a group.
 
-#wip
 family.hollow-frostscape-assault.name = Assult
 family.hollow-frostscape-assault.description = A family of units designed to deal damage to targets, occasionally in swarms.
-family.hollow-frostscape-assault.details = [#ffa465]Assaults[] are usually your generic fighter unit which shouldn't be too difficult to handle in isolation. They will often come with supporting unit family types.\nSpecialized assault units may be much tankier than other units, have more armor or more dps. They are overall your go-to choice when unsure about which tactic will work best against an unknown, fortified outpost.
+family.hollow-frostscape-assault.details = [#ffa465]Assaults[] are usually your generic fighter unit which shouldn't be too difficult to handle in isolation. They will often come with supporting unit family types.\n\nSpecialized assault units may be much tankier than other units, have more armor or more dps. They are overall your go-to choice when unsure about which tactic will work best against an unknown, fortified outpost.
 
+family.hollow-frostscape-specialist.name = Specialist
+family.hollow-frostscape-specialist.description = A family of units designed to fill niches whether it be suicide bombing or enemy suppression.
+family.hollow-frostscape-specialist.details = [#c49ff4]Specialists[] are a broad category of units, spanning from spider-like mechs that use sappers to suicide bombers and regeneration suppressors. [red]Just knowing an enemy has obtained specialist family units won't be enough to determine how to deal with them.[]\n\nMost breeds of specialsts will use [accent]status-effect[] afflicting weapons, whilst others are specialists simply because of flight. What does and doesn't belong in the specialist family is a puzzling question, due to their [accent]"niche"[] nature. \n\nThey are a wildcard of a family, and should be used to the best of their [accent]strengths[].
+
+#wip
 controller.default.name = Default Controller
 controller.hollow-frostscape-fart.name = Fart Controller
 
