--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -11,7 +11,7 @@ unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid j
 unit.hollow-frostscape-stalagmite.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
 
 unit.hollow-frostscape-cord.name = Cord
-unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds that frag into bouncy shards at enemy targets, applying a stacking slowing effect.
+unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds at enemy targets, applying a stacking slowing effect.
 unit.hollow-frostscape-cord.details = Stuck in a bind
 
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
