Batch of changes
-Reduced upgrade boilerplate
-Changed upgrade UI icon style
-Implemented CrumblingWall and a Stone Wall block to go with
-Landmines got new functionality to ignore enabled state/team when upgraded with Always Armed(Landmines)
-Pierce-capped Cord's frag
-Added function for when upgrade module finishes installing an upgrade (Upgradeable#upgraded)
-New status effect sprites
-Conflex description fix

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,3 +1,7 @@
+unit.hollow-frostscape-cord.name = Cord
+unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds at enemy targets, applying a stacking slowing effect. Releases an angled blast of fragments on destruction.
+unit.hollow-frostscape-cord.details = Stuck in a bind
+
 unit.hollow-frostscape-sunspot.name = Sunspot
 unit.hollow-frostscape-sunspot.description = Charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
 unit.hollow-frostscape-sunspot.details = Looks like a spearhead, but its proportions are wack.
@@ -10,9 +14,6 @@ unit.hollow-frostscape-stalagmite.name = Stalagmite
 unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water at enemy targets. Pressure rises proportionally to speed. Travels between bodies of water with a toggleable engine.
 unit.hollow-frostscape-stalagmite.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
 
-unit.hollow-frostscape-cord.name = Cord
-unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds at enemy targets, applying a stacking slowing effect.
-unit.hollow-frostscape-cord.details = Stuck in a bind
 
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
 block.spawn.details = Wtf are you doing scanning spawns.
@@ -28,6 +29,10 @@ block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic
 block.hollow-frostscape-thermal-landmine.name = Thermal Mine
 block.hollow-frostscape-thermal-landmine.description = Evades detection, activates when stepped on. Remains on while a unit is nearby.
 block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the map evasion tech, sponsored by RAID BLOCK SHADOW HEROS
+
+block.hollow-frostscape-stone-wall.name = Stone Barrier
+block.hollow-frostscape-stone-wall.description = Protects structures from enemy projectiles. Crumbles under stress, bolstering defense.
+block.hollow-frostscape-stone-wall.dedtails = Shoddy construction, but it works.
 
 block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
@@ -83,11 +88,12 @@ status.hollow-frostscape-caustic-coating.details = You'll need an Effigy of Deca
 
 status.hollow-frostscape-conflex-internal.name = Conflex
 status.hollow-frostscape-conflex.name = Conflex
-status.hollow-frostscape-conflex.description = Stacks with itself. Less effective against larger units.
+status.hollow-frostscape-conflex.description = Slows the affected systems down proportional to its duration. Stacks with itself. Less effective against larger units. Durations high enough disarm affected targets.
 status.hollow-frostscape-conflex.details = The inverse of a reflex in graph theory would have a con, so conflex was born out of cursed math naming!
 
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
 upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
+upgrade.hollow-frostscape-always-armed-landmine.name = Always Armed(Landmines)
 
 block.hollow-frostscape-mafic-floor.name = Mafic Floor
 block.hollow-frostscape-mafic-stone.name = Mafic Stone
