Start of Complex's environment
-Implemented a fair few environmental tiles for the Complex
-Removed some unnecessary logging
-Polishing of stone wall sprites
-Fixed bug where CrumblingWall woudn't update state when healed
-Implemented power plugs, which interface with the resource bank's power through power sockets

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -112,6 +112,12 @@ stat.shieldDamageMultiplier = Shield Damage Multiplier
 bar.pumpabletiles = Pumpable tiles found!
 bar.crackedfloors = Cracked floors found!
 bar.nocrackedfloors = No valid floors.
+bar.bank.poweramount = Bank Power: {0}
+bar.importing = Importing: {0}/s
+bar.exporting = Exporting: {0}/s
+bar.stable = Stable: No flow
+bar.socketsfound = {0} Socket covered
+bar.nosockets = No plugs of same type!
 
 category.family = Family
 category.scanning = Scanning
