--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -26,6 +26,27 @@ block.air.details = mmm 20% unit engine exhaust\nb r e a t h e s       a   g r  
 
 block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic
 
+block.hollow-frostscape-grating.name = Grating
+block.hollow-frostscape-grating.env-category = Complex
+block.hollow-frostscape-plating.name = Plating
+block.hollow-frostscape-plating.env-category = Complex
+block.hollow-frostscape-plating-cross.name = Plating Cross
+block.hollow-frostscape-plating-cross.env-category = Complex
+block.hollow-frostscape-socket.name = Socket
+block.hollow-frostscape-socket.env-category = Complex
+block.hollow-frostscape-power-socket.name = Power Socket
+block.hollow-frostscape-power-socket.env-category = Complex
+block.hollow-frostscape-power-socket-large.name = Power Socket Large
+block.hollow-frostscape-power-socket-large.env-category = Complex
+block.hollow-frostscape-liquid-socket.name = Liquid Socket
+block.hollow-frostscape-liquid-socket.env-category = Complex
+block.hollow-frostscape-liquid-socket-large.name = Liquid Socket Large
+block.hollow-frostscape-liquid-socket-large.env-category = Complex
+block.hollow-frostscape-item-socket.name = Item Socket
+block.hollow-frostscape-item-socket.env-category = Complex
+block.hollow-frostscape-item-socket-large.name = Item Socket large
+block.hollow-frostscape-item-socket-large.env-category = Complex
+
 block.hollow-frostscape-thermal-landmine.name = Thermal Mine
 block.hollow-frostscape-thermal-landmine.description = Evades detection, activates when stepped on. Remains on while a unit is nearby.
 block.hollow-frostscape-thermal-landmine.details = Pulse mine 2 return of the map evasion tech, sponsored by RAID BLOCK SHADOW HEROS
@@ -37,6 +58,14 @@ block.hollow-frostscape-stone-wall.dedtails = Shoddy construction, but it works.
 block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
 block.hollow-frostscape-pyroclast.details = The horns aren't just for show.
+
+block.hollow-frostscape-power-plug.name = Power Plug
+block.hollow-frostscape-power-plug.description = Transfers a variable amount of power in and out of the sector's power bank.
+block.hollow-frostscape-power-plug.details = More of a two-way rate-limited diode really
+
+block.hollow-frostscape-power-plug-large.name = Large Power Plug
+block.hollow-frostscape-power-plug-large.description = Transfers a variable amount of power in and out of the sector's power bank. Greater buffer size and efficiency than a regular plug.
+block.hollow-frostscape-power-plug-large.details = Ate too many wires and became a zenner diode.
 
 item.hollow-frostscape-rust.name = Rust
 item.hollow-frostscape-rust.description = Pieces of scrap metal commonly extracted from wreckage and decayed structures.\nFar too gone to be refined, but still usable in machines...
@@ -102,6 +131,8 @@ block.hollow-frostscape-mafic-boulder.name = Mafic Boulder
 settings.frostscape-title = Frostscape
 settings.frostscape-parallax = Parallax
 settings.frostscape-wind-visual-force = Wind Visual Force
+settings.frostscape-flashing-lights-safety = Flash Safety Mode
+settings.frostscape.flashingwarning = Note that \"Flash Safety Mode\" affects certain floors in the Complex, along with flashy effects found elsewhere. Primarily affects \n-periodic rapid blinking\n-excessive flashiness in effects-\nsources of light.
 
 stat.familyname = Title
 stat.familylink = More info
@@ -113,11 +144,15 @@ bar.pumpabletiles = Pumpable tiles found!
 bar.crackedfloors = Cracked floors found!
 bar.nocrackedfloors = No valid floors.
 bar.bank.poweramount = Bank Power: {0}
-bar.importing = Importing: {0}/s
-bar.exporting = Exporting: {0}/s
-bar.stable = Stable: No flow
+bar.bank.importing = Importing: {0}/s
+bar.bank.exporting = Exporting: {0}/s
+bar.bank.stable = Stable: No flow
+bar.bank.full = Bank full!
+bar.bank.empty = Bank empty!
+bar.bank.disabled = Power Bank Disabled
 bar.socketsfound = {0} Socket covered
 bar.nosockets = No plugs of same type!
+bar.plugefficiency = {0}% coverage
 
 category.family = Family
 category.scanning = Scanning
